# escriptorium_python_connector

./: .coveragerc  .env  .gitignore  README.md  escriptorium.yaml  example.ipynb  example.py  pyproject.toml  requirements.txt  setup.cfg  test.py  untitled.py
escriptorium_docker/: docker-compose.override.yml  docker-compose.yml  variables.env
src/escriptorium_connector/: __init__.py  connector.py
src/escriptorium_connector/convenience_functions/: copy_document.py
src/escriptorium_connector/dtos/: __init__.py  annotation_dtos.py  document_dtos.py  line_dtos.py  part_dtos.py  project_dtos.py  region_dtos.py  super_dtos.py  transcription_dtos.py  user_dtos.py
src/escriptorium_connector/models/: __init__.py  annotation_models.py  document_models.py  super_models.py
src/escriptorium_connector/utils/: pydantic_dataclass_fix.py
tests/: helpers.py  test_annotations.py  test_documents.py  test_line_types.py  test_lines.py  test_parts.py  test_transcriptions.py
