[tool.poetry]
name = "escriptorium-connector"
version = "0.2.6"
description = "This simple python package makes it easy to connect to an eScriptorium instance and to work with the data there."
authors = ["Bronson Brown-deVost <bronsonbdevost@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/sofer_mahir/escriptorium_python_connector"
keywords = ["escriptorium","api"]
packages = [
    { include = "escriptorium_connector", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
websocket-client = "^1.8.0"
lxml = "^5.2.2"
requests = "^2.32.3"
pydantic = "^2.8.2"
alive-progress = "^3.3.0"
colorama = "^0.4.6"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.19.2"
pytest = "^6.2.5"
setuptools = "^59.4.0"
swagger-marshmallow-codegen = "^0.6.4"
black = {version = "^21.11b1", allow-prereleases = true}
ipykernel = "^6.6.0"
pytest-cov = "^3.0.0"
deepdiff = "^5.6.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"
